# uv-issue-example

./: README.md  pyproject.toml
tests/: tests.py
